--- a/pom.xml
+++ b/pom.xml
@@ -14,8 +14,8 @@
     <packaging>jar</packaging>
 
     <properties>
-        <version.wildfly.swarm>2017.3.3</version.wildfly.swarm>
-        <version.maven.resources.plugin>3.0.2</version.maven.resources.plugin>
+        <version.wildfly.swarm>2018.2.0.Final</version.wildfly.swarm>
+        <version.maven.resources.plugin>2.6</version.maven.resources.plugin>
         <maven.compiler.target>1.8</maven.compiler.target>
         <maven.compiler.source>1.8</maven.compiler.source>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
